Home page working

--- a/index.html
+++ b/index.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>POPsToolkit Template</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.3.0/css/reveal.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.3.0/css/theme/white.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/0.96/head.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.3.0/js/reveal.min.js"></script>
     <meta charset="utf-8">
-    <title>pops</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
+    <div class="container-fluid" id="content" tabindex="-1">
+      <header class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <a href="index.html">
+              <img src="/static/logo.png" width="200px" style="margin-bottom: 15px" />
+            </a>
+          </div>
+          <div class="col-md-6 text-right USAIDLogo">
+            <a href="https://www.usaid.gov" class=""><img src="https://www.usaid.gov/sites/all/themes/usaid/logo.png" alt="U.S. Agency for International Development"></a>
+          </div>
+        </div>
+      </header>
+      <div class="row">
+        <div class="col-md-12 topnav">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-2 text-center nav"><a href="about.html">About POPs</a></div>
+              <div class="col-md-2 text-center nav"><a href="#">Site Prioritization for Risk Assessment</a></div>
+              <div class="col-md-2 text-center nav"><a href="#">Field Sampling Procedures</a></div>
+              <div class="col-md-2 text-center nav"><a href="#">Human Health Risk Assessment</a></div>
+              <div class="col-md-2 text-center nav"><a href="#">Risk Management</a></div>
+            </div>				
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div id="app"></div>
+      </div>
+      <footer>
+        <div class="row">
+          <div class="col-md-12 footerbar">
+          </div>
+        </div>	
+        <div class="row">
+          <div class="col-md-12 footerlinks">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4 ">
+                  <div class="footerlinkgroup">
+                    <a class="heading" href="#"><i class="glyphicon glyphicon-home"></i> Home</a> 
+                  </div>
+                  <div class="footerlinkgroup">
+                    <a class="heading" href="#">About POPs</a> 
+                  </div>
+                  <div class="footerlinkgroup">
+                    <a class="heading" href="#">Site Prioritization for Risk Assessment</a> 
+                  </div>
+                </div>
+                <div class="col-md-4 ">
+                  <div class="footerlinkgroup">
+                    <a class="heading" href="#">Field Sampling Procedures</a> 
+                  </div>
+                  <div class="footerlinkgroup">
+                    <a class="heading" href="#">Human Health Risk Assessment</a> 
+                  </div>
+                  <div class="footerlinkgroup">
+                    <a class="heading" href="#">Risk Management</a> 
+                  </div>
+                </div>
+                <div class="col-md-4 ">
+                  <div class="footermeta">
+                    <p>The information provided on this Web site is not official U.S. Government information and does not represent the views or positions of the U.S. Agency for International Development or the U.S. Government.</p>
+                    <p><a href="#">Privacy Policy</a></p>
+                  </div>
+                </div>
+              </div>				
+            </div>
+          </div>
+        </div>	
+      </footer>
+    </div>
   </body>
 </html>
