--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
-    <div id="app"></div>
+    <div id="carc"></div>
   </body>
 </html>
